# autofw

./: .env.example  .gitignore  pyproject.toml
autofw/: __init__.py  browser.py  delays.py  mouse.py  retry.py  typing.py
autofw/email/: __init__.py  gmail.py
autofw/examples/: __init__.py  run_topps.py  run_topps_concurrent.py  topps.py
